--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>SOREX-CREATIV AGENCY</title>
 </head>
 
@@ -75,31 +75,91 @@
         </div>
     </section>
     <section class="features">
-        <div class="features-content">
+        <div class="features-text">
             <h1>We Best Features</h1>
-            <p>We Are the Best Softwer
+            <p>We Are the Best Softwer <br>
                 Company Manage.</p>
         </div>
     </section>
     <section class="manages">
-        
-        <div class="design">
-            <i class="fa-regular fa-id-card"></i>
-            <h1>Creative Design</h1>
-            <p>Business is the knowledge or master event. Identify the error of the we website coding page speed.</p>
-            <button type="see more">See more-></button>
+        <div class="grid-manage">
+            <div class="design">
+                <div class="manage-image-box">
+                    <img src="assets/image/fea-1.png" alt="">
+                </div>
+                <h1>Creative Design</h1>
+                <p>Business is the knowledge or master event. Identify the error of the we website coding page speed.
+                </p>
+                <button type="see more">See more-></button>
+            </div>
+            <div class="design">
+                <div class="manage-image-box">
+                    <img src="assets/image/fea-3.png" alt="">
+                </div>
+                <h1>Online Marketing</h1>
+                <p>Business is the knowledge or master event. Identify the error of the we website coding page speed.
+                </p>
+                <button type="see more">See more-></button>
+            </div>
+            <div class="design">
+                <div class="manage-image-box">
+                    <img src="assets/image/fea-2.png" alt="">
+                </div>
+                <h1>Online Marketing</h1>
+                <p>Business is the knowledge or master event. Identify the error of the we website coding page speed.
+                </p>
+                <button type="see more">See more-></button>
+            </div>
         </div>
-        <div class="design">
-            <i class="fa-solid fa-pencil"></i>
-            <h1>Online Marketing</h1>
-            <p>Business is the knowledge or master event. Identify the error of the we website coding page speed.</p>
-            <button type="see more">See more-></button>
+    </section>
+    <section class="grid-section">
+        <div class="container">
+            <div class="grid">
+                <div class="grid-item-image-box">
+                    <img src="assets/image/boys sorex.png" alt="">
+                </div>
+                <div class="grid-item-content-box">
+                    <h2>Our About Now</h2>
+                    <p>Save This Managing AboutMedia For Business</p>
+                    <h3>Business tailored it design, management & support servicesbusiness agency elit, sed do eiusmod
+                        tempor</h3>
+                    <div class="list-box">
+                        <ul>
+                            <li>
+                                <input type="checkbox" checked>
+                                <h6>Business sagittis leo.</h6>
+                            </li>
+                            <li>
+                                <input type="checkbox" checked>
+                                <h6>Business sagittis leo.</h6>
+                            </li>
+                            <li>
+                                <input type="checkbox" checked>
+                                <h6>Business sagittis leo.</h6>
+                            </li>
+                            <li>
+                                <input type="checkbox" checked>
+                                <h6>Business sagittis leo.</h6>
+                            </li>
+                            <li>
+                                <input type="checkbox" checked>
+                                <h6>Business sagittis leo.</h6>
+                            </li>
+                            <li>
+                                <input type="checkbox" checked>
+                                <h6>Business sagittis leo.</h6>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="design">
-            <i class="fa-solid fa-money-bill-trend-up"></i>
-            <h1>Online Marketing</h1>
-            <p>Business is the knowledge or master event. Identify the error of the we website coding page speed.</p>
-            <button type="see more">See more-></button>
+    </section>
+    <section class="counter">
+        <div class="container">
+            <div class="counter-grid">
+                dhgh
+            </div>
         </div>
     </section>
 </body>
