--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -59,7 +60,7 @@
         </div>
     </header>
     <section class="sorex">
-        <div class="sorex-flex">
+        <div class="sorex-flex" data-aos="fade-left" data-aos-easing="linear" data-aos-duration="1000">
             <h1>We Are Best Agency!</h1>
             <p>AgencySimple Best SmartThat Will Help Grow toAre Your Busines</p>
             <h2>Business tailored it design, management & support servicesbusiness agency elit, sed do eiusmod tempor.
@@ -76,8 +77,8 @@
     </section>
     <section class="features">
         <div class="features-text">
-            <h1>We Best Features</h1>
-            <p>We Are the Best Softwer <br>
+            <h1 data-aos="fade-right" data-aos-easing="linear" data-aos-duration="3000">We Best Features</h1>
+            <p data-aos="fade-left" data-aos-easing="linear" data-aos-duration="3000">We Are the Best Softwer <br>
                 Company Manage.</p>
         </div>
     </section>
@@ -88,7 +89,8 @@
                     <img src="assets/image/fea-1.png" alt="">
                 </div>
                 <h1>Creative Design</h1>
-                <p>Business is the knowledge or master event. Identify the error of the we website coding page speed.
+                <p>Business is the knowledge or master event. <br> Identify the error of the we website coding page
+                    speed.
                 </p>
                 <button type="see more">See more-></button>
             </div>
@@ -97,7 +99,8 @@
                     <img src="assets/image/fea-3.png" alt="">
                 </div>
                 <h1>Online Marketing</h1>
-                <p>Business is the knowledge or master event. Identify the error of the we website coding page speed.
+                <p>Business is the knowledge or master event. <br>Identify the error of the we website coding page
+                    speed.
                 </p>
                 <button type="see more">See more-></button>
             </div>
@@ -106,7 +109,8 @@
                     <img src="assets/image/fea-2.png" alt="">
                 </div>
                 <h1>Online Marketing</h1>
-                <p>Business is the knowledge or master event. Identify the error of the we website coding page speed.
+                <p>Business is the knowledge or master event. <br> Identify the error of the we website coding page
+                    speed.
                 </p>
                 <button type="see more">See more-></button>
             </div>
@@ -115,10 +119,12 @@
     <section class="grid-section">
         <div class="container">
             <div class="grid">
-                <div class="grid-item-image-box">
+                <div class="grid-item-image-box" data-aos="fade-right" data-aos-easing="linear"
+                    data-aos-duration="1500">
                     <img src="assets/image/boys sorex.png" alt="">
                 </div>
-                <div class="grid-item-content-box">
+                <div class="grid-item-content-box" data-aos="fade-left" data-aos-easing="linear"
+                    data-aos-duration="1500">
                     <h2>Our About Now</h2>
                     <p>Save This Managing AboutMedia For Business</p>
                     <h3>Business tailored it design, management & support servicesbusiness agency elit, sed do eiusmod
@@ -157,11 +163,155 @@
     </section>
     <section class="counter">
         <div class="container">
+            <div class="counter-content">
+                <div class="head">
+                    <h1>We Best Counter</h1>
+                </div>
+                <div class="counter-body">
+                    <p>Counter Industries server</p>
+                </div>
+            </div>
             <div class="counter-grid">
-                dhgh
+                <div class="grid1" data-aos="zoom-in" data-aos-easing="linear" data-aos-duration="1000">
+                    <h2>Work Per Week</h2>
+                    <i class="fas fa-rocket-launch"></i>
+                    <h4>0+</h4>
+                </div>
+                <div class="grid2" data-aos="zoom-in" data-aos-easing="linear" data-aos-duration="1500">
+                    <h2>Keywords Updated</h2>
+                    <i class="fa-regular fa-messages"></i>
+                    <h4>110+</h4>
+                </div>
+                <div class="grid3" data-aos="zoom-in" data-aos-easing="linear" data-aos-duration="2000">
+                    <h2>Google Search</h2>
+                    <i class="fas fa-regular fa-gear"></i>
+                    <h4>0+</h4>
+                </div>
+                <div class="grid4" data-aos="zoom-in" data-aos-easing="linear" data-aos-duration="3000">
+                    <h2>Google Search</h2>
+                    <i class="fas fa-envelope-open-text"></i>
+                    <h4>120+</h4>
+                </div>
             </div>
         </div>
     </section>
+    <section class="unique-section">
+        <div class="unique">
+            <div class="unique-container">
+                <div class="unique-item-image-box" data-aos="fade-right" data-aos-easing="linear"
+                    data-aos-duration="1500">
+                    <img src="assets/image/unique.png" alt="">
+                </div>
+                <div class="unique-item-content-box" data-aos="fade-left" data-aos-easing="linear"
+                    data-aos-duration="1500">
+                    <h2>Our Company Solution</h2>
+                    <p>Unique Agncy and Solutionfor every Company.</p>
+                    <h3>Being able to crank out videos consistently, localize them for different regions, andstill save
+                        resources, time, energy has been a game change</h3>
+                    <div class="unique-list-box">
+                        <ul class="display-flex-list">
+                            <li class="item">
+                                <input type="checkbox" checked>
+                                <h6>Our mission</h6>
+                            </li>
+                            <li class="item">
+                                <input type="checkbox" checked>
+                                <h6>Team support</h6>
+                            </li>
+                            <li class="item">
+                                <input type="checkbox" checked>
+                                <h6>Projects job</h6>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="online">
+                        <div class="online-img">
+                            <img src="assets/image/lamp.png" alt="">
+                        </div>
+                        <div class="content">
+                            <h1>Online Agency Website Service</h1>
+                            <h4>App Design, WeFbsite</h4>
+                        </div>
+                    </div>
+                    <div class="uni-button">
+                        <button type="button">Read more</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="agency">
+        <div class="agency-absolute-box">
+            <img src="/assets/image/cta-icon.png" alt="">
+        </div>
+        <div class="agency-background-img">
+           <div class="agency-content-box">
+            <h1>Let’s Business Something Agency</h1>
+            <p>There are many variations of passages of agency
+                Lorem Ipsum Fasts injecte.</p>
+           </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer-display-flex">
+            <div class="footer-box">
+                <div class="footer-logo-box">
+                    <img src="/assets/image/logo-sorex.png" alt="">
+                </div>
+                <div class="footer-content-box">
+                    <p class="desc">
+                        Our approach to itis unique around know work an we know doesn’t work verified factors in play.
+                    </p>
+                </div>
+            </div>
+            <div class="footer-box">
+                <div class="footer-head-box">
+                    <h6>Services</h6>
+                </div>
+                <nav>
+                    <a href="">Web Design</a>
+                    <a href="">Development</a>
+                    <a href="">WordPress</a>
+                </nav>
+            </div>
+            <div class="footer-box">
+                <div class="footer-head-box">
+                    <h6>Services</h6>
+                </div>
+                <nav>
+                    <a href="">Web Design</a>
+                    <a href="">Development</a>
+                    <a href="">WordPress</a>
+                </nav>
+            </div>
+            <div class="footer-box">
+                <div class="footer-head-box">
+                    <h6>NewsLetter</h6>
+                </div>
+                <form>
+                    <input type="email" placeholder="your email"/>
+                    <button>Subscribe</button>
+                </form>
+                <div class="social-link">
+                    <h5>Social Media:</h5>
+                    <div class="box">
+                        <a href="facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="twitter.com"><i class="fa-brands fa-twitter"></i></a>
+                        <a href=""><i class="fa-brands fa-google-plus-g"></i></a>
+                        <a href=""><i class="fa-brands fa-pinterest-p"></i></a>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </footer>
+
+
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
