--- a/index.html
+++ b/index.html
@@ -245,23 +245,31 @@
             <img src="/assets/image/cta-icon.png" alt="">
         </div>
         <div class="agency-background-img">
-           <div class="agency-content-box">
-            <h1>Let’s Business Something Agency</h1>
-            <p>There are many variations of passages of agency
-                Lorem Ipsum Fasts injecte.</p>
-           </div>
+            <div class="agency-content-box">
+                <h1>Let’s Business Something Agency</h1>
+                <p>There are many variations of passages of agency <br>
+                    Lorem Ipsum Fasts injecte.</p>
+            </div>
         </div>
     </section>
     <footer class="footer">
         <div class="footer-display-flex">
             <div class="footer-box">
                 <div class="footer-logo-box">
-                    <img src="/assets/image/logo-sorex.png" alt="">
+                    <img src="/assets/image/footer-logo.png" alt="">
                 </div>
                 <div class="footer-content-box">
                     <p class="desc">
-                        Our approach to itis unique around know work an we know doesn’t work verified factors in play.
+                        Our approach to itis unique around <br> know work an we know doesn’t work <br> verified factors
+                        in play.
                     </p>
+                </div>
+                <div class="footer-icon-box">
+                    <i class="fa-solid fa-phone"></i>
+                    <div class="footer-question">
+                        <h4>Have Any Questions?</h4>
+                        <a href="">+230-450-975-65</a>
+                    </div>
                 </div>
             </div>
             <div class="footer-box">
@@ -272,16 +280,20 @@
                     <a href="">Web Design</a>
                     <a href="">Development</a>
                     <a href="">WordPress</a>
+                    <a href="">Online Marketing</a>
+                    <a href="">Content</a>
                 </nav>
             </div>
             <div class="footer-box">
                 <div class="footer-head-box">
-                    <h6>Services</h6>
+                    <h6>Support Link</h6>
                 </div>
                 <nav>
                     <a href="">Web Design</a>
                     <a href="">Development</a>
                     <a href="">WordPress</a>
+                    <a href="">Online Marketing</a>
+                    <a href="">Content</a>
                 </nav>
             </div>
             <div class="footer-box">
@@ -289,7 +301,7 @@
                     <h6>NewsLetter</h6>
                 </div>
                 <form>
-                    <input type="email" placeholder="your email"/>
+                    <input type="email" placeholder="your email" />
                     <button>Subscribe</button>
                 </form>
                 <div class="social-link">
@@ -301,10 +313,21 @@
                         <a href=""><i class="fa-brands fa-pinterest-p"></i></a>
                     </div>
                 </div>
-                
+
             </div>
-        </div>
+        </div>        
     </footer>
+    <section class="copyright">
+        <div class="copyright-box">
+            <h1>Copyright Sorex 2022, All Right Reserved</h1>
+        </div>
+        <div class="cpy">
+            <a href="">Home</a>
+            <a href="">Cases</a>
+            <a href="">About</a>
+            <a href="">Privacy&Policy</a>
+        </div>
+    </section>
 
 
 
